# usbip-tools

./: Cargo.toml  Makefile  README.md
scripts/: build-deb.sh
usbip-client/: Cargo.toml
usbip-client/packaging/: usbip-client.desktop
usbip-client/src/: console.rs  core.rs  discovery.rs  main.rs  usbip.rs
usbip-client/src/gui/: mod.rs  style.rs  view.rs
usbip-server/: Cargo.toml  build.rs
usbip-server/assets/: index.html
usbip-server/packaging/: usbip-server.service
usbip-server/src/: discovery_udp.rs  main.rs  rules.rs  udev_watch.rs  usb.rs  web.rs
usbip-server/ui/: package-lock.json
usbip-server/ui/src/: App.css  App.tsx  api.ts  i18n.ts  index.css  types.ts
