[package]
name = "usbip-server"
version = "0.1.1"
edition = "2021"

[dependencies]
anyhow = "1"
axum = "0.8"
clap = { version = "4", features = ["derive"] }
hostname = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["fs", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio-stream = { version = "0.1", features = ["sync"] }
udev = "0.9"
uuid = { version = "1", features = ["v4", "serde"] }
inotify = "0.10"
libc = "0.2"

[package.metadata.deb]
maintainer = "usbip-server"
depends = "$auto, usbip"
assets = [
  ["target/release/usbip-server", "usr/bin/usbip-server", "755"],
  ["packaging/usbip-server.service", "lib/systemd/system/usbip-server.service", "644"],
]


